--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             class="faq__question"
           >
             <span>What is Frontend Mentor, and how will it help me?</span>
-            <span aria-hidden="true" class="faq__expand">+</span>
+            <img src="assets/images/icon-plus.svg" alt="" class="faq__expand" />
           </button>
         </h3>
         <p
@@ -44,6 +44,7 @@
           JavaScript. It's suitable for all levels and ideal for portfolio
           building.
         </p>
+        <div class="faq__border"></div>
         <h3>
           <button
             type="button"
@@ -53,7 +54,7 @@
             class="faq__question"
           >
             <span>Is Frontend Mentor free?</span>
-            <span aria-hidden="true" class="faq__expand">+</span>
+            <img src="assets/images/icon-plus.svg" alt="" class="faq__expand" />
           </button>
         </h3>
         <p
@@ -66,6 +67,7 @@
           with the free option providing access to a range of projects suitable
           for all skill levels.
         </p>
+        <div class="faq__border"></div>
         <h3>
           <button
             type="button"
@@ -75,7 +77,7 @@
             class="faq__question"
           >
             <span> Can I use Frontend Mentor projects in my portfolio? </span>
-            <span aria-hidden="true" class="faq__expand">+</span>
+            <img src="assets/images/icon-plus.svg" alt="" class="faq__expand" />
           </button>
         </h3>
         <p
@@ -88,6 +90,7 @@
           portfolio. It's an excellent way to showcase your skills to potential
           employers!
         </p>
+        <div class="faq__border"></div>
         <h3>
           <button
             type="button"
@@ -99,7 +102,7 @@
             <span>
               How can I get help if I'm stuck on a Frontend Mentor challenge?
             </span>
-            <span aria-hidden="true" class="faq__expand">+</span>
+            <img src="assets/images/icon-plus.svg" alt="" class="faq__expand" />
           </button>
         </h3>
         <p
@@ -114,5 +117,6 @@
         </p>
       </section>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
