first question default open

--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
         <h3>
           <button
             type="button"
-            aria-expanded="false"
+            aria-expanded="true"
             aria-controls="section1"
             id="question1"
             class="faq__question"
           >
             <span>What is Frontend Mentor, and how will it help me?</span>
-            <img src="assets/images/icon-plus.svg" alt="" class="faq__expand" />
+            <img
+              src="assets/images/icon-minus.svg"
+              alt=""
+              class="faq__expand"
+            />
           </button>
         </h3>
         <p
-          class="faq__section hidden"
+          class="faq__section"
           id="section1"
           role="region"
           aria-labelledby="question1"
